--- a/style.css
+++ b/style.css
@@ -65,6 +65,16 @@ nav ul li a:hover, a.active{
     width: 80%;
     margin: 50px 0px 0px 80px;
 }
+#after-booking-page {
+    background-color: rgb(87, 173, 231);
+    border: 1px solid rgb(87, 173, 231);
+    padding: 20px;
+    border-radius: 5px;
+    float: right;
+    width: 40%;
+    margin: 10px;
+    display: none;
+}
 .booking-form h3{
     margin: 10px 0px;
 }
